--- a/static/games.html
+++ b/static/games.html
@@ -141,7 +141,7 @@
             <div class='game-card'><a href='/hold/deathrun.html'><img src='/img/deathrun.png' alt='Game'><h3>Deathrun 3D</h3></a></div>
         </div>
     </div>
-
-    <script src="/js/style.js"></script>
-</body>
+    <script>(function () { var script = document.createElement('script'); script.src="https://cdn.jsdelivr.net/npm/eruda"; document.body.append(script); script.onload = function () { eruda.init(); } })();</script>
+        <script src="/js/style.js"></script>
+    </body>
 </html>
