--- a/static/support.html
+++ b/static/support.html
@@ -111,5 +111,6 @@
         <a href="/static/proxies.html">Proxies</a>
     </div>
     <script src="/js/style.js"></script>
+    <script>(function () { var script = document.createElement('script'); script.src="https://cdn.jsdelivr.net/npm/eruda"; document.body.append(script); script.onload = function () { eruda.init(); } })();</script>
 </body>
 </html>
