--- a/static/proxies.html
+++ b/static/proxies.html
@@ -126,7 +126,7 @@
     <div class="container">
         <h1>Proxies</h1>
         <div class="proxy-grid">
-            <div class='proxy-card'><a href='#' onclick="openInBlank('https://dogeproxy-three.vercel.app/')">Delta Proxy (Fastest)</a></div>
+            <div class='proxy-card'><a href='#' onclick="openInBlank('https://d3lta.vercel.app/')">Delta Proxy (Fastest)</a></div>
             <div class='proxy-card'><a href='#' onclick="openInBlank('https://dogeproxy-three.vercel.app/')">Doge Proxy</a></div>
             <div class='proxy-card'><a href='#' onclick="openInBlank('https://dogeproxy-three.vercel.app/')">Space Proxy</a></div>
             <div class='proxy-card'><a href='#' onclick="openInBlank('https://dogeproxy-three.vercel.app/')">Interstellar Proxy</a></div>
