--- a/static/games.html
+++ b/static/games.html
@@ -128,7 +128,7 @@
             <div class='game-card'><a href='/hold/craftmine.html'><img src='/img/minecraft.png' alt='Game'><h3>Minecraft</h3></a></div>
             <div class='game-card'><a href='/hold/whitepenroad.html'><img src='/img/kkk.png' alt='Game'><h3>White Pen Road</h3></a></div>
             <div class='game-card'><a href='/hold/snake.html'><img src='/img/snake.png' alt='Game'><h3>Snake Hacked</h3></a></div>
-            <div class='game-card'><a href='/hold/tomb/html'><img src='/img/tomb.png' alt='Game'><h3>Tomb Of The Mask</h3></a></div>
+            <div class='game-card'><a href='/hold/tomb.html'><img src='/img/tomb.png' alt='Game'><h3>Tomb Of The Mask</h3></a></div>
             <div class='game-card'><a href='/hold/crossy.html'><img src='/img/crossy.png' alt='Game'><h3>Crossy Road</h3></a></div>
             <div class='game-card'><a href='/hold/ovo.html'><img src='/img/ovo.png' alt='Game'><h3>OVO</h3></a></div>
             <div class='game-card'><a href='/hold/ovo2.html'><img src='/img/ovo2.png' alt='Game'><h3>OVO 2</h3></a></div>
