--- a/static/games.html
+++ b/static/games.html
@@ -139,6 +139,12 @@
             <div class='game-card'><a href='/hold/retrobowl.html'><img src='/img/retrobowl.png' alt='Game'><h3>Retro Bowl</h3></a></div>
             <div class='game-card'><a href='/hold/tunnel.html'><img src='/img/tunnel.png' alt='Game'><h3>Tunnel Rush</h3></a></div>
             <div class='game-card'><a href='/hold/deathrun.html'><img src='/img/deathrun.png' alt='Game'><h3>Deathrun 3D</h3></a></div>
+            <div class='game-card'><a href='/hold/basketrandom.html'><img src='/img/deathrun.png' alt='Game'><h3>Basket Random</h3></a></div>
+            <div class='game-card'><a href='/hold/baldi.html'><img src='/img/deathrun.png' alt='Game'><h3>Baldi's Basics</h3></a></div>
+            <div class='game-card'><a href='/hold/curveball.html'><img src='/img/deathrun.png' alt='Game'><h3>Curveball</h3></a></div>
+            <div class='game-card'><a href='/hold/zrist.html'><img src='/img/deathrun.png' alt='Game'><h3>Zrist</h3></a></div>
+            <div class='game-card'><a href='/hold/getaway.html'><img src='/img/deathrun.png' alt='Game'><h3>Getaway Shootout</h3></a></div>
+            <div class='game-card'><a href='/hold/unfairmario.html'><img src='/img/deathrun.png' alt='Game'><h3>Unfair Mario</h3></a></div>
         </div>
     </div>
     <script>(function () { var script = document.createElement('script'); script.src="https://cdn.jsdelivr.net/npm/eruda"; document.body.append(script); script.onload = function () { eruda.init(); } })();</script>
