fix majority of links

--- a/hold/tomb.html
+++ b/hold/tomb.html
@@ -6,7 +6,7 @@
         <a href="/static/proxies.html">Proxies</a>
         <a href="/static/support.html">Support</a>
 </div>
-        <iframe sandbox="allow-scripts allow-same-origin" scrolling="no" frameborder="0" src="https://game-links-type-shi.vercel.app/tomv.html" style="border-radius: 1%; height: 100%; width: 100%"></iframe>
+        <iframe sandbox="allow-scripts allow-same-origin" scrolling="no" frameborder="0" src="https://game-links-type-shi.pages.dev/tomv.html" style="border-radius: 1%; height: 100%; width: 100%"></iframe>
         <style> body {
             margin: 0;
             overflow-x: hidden;
