--- a/index.html
+++ b/index.html
@@ -257,6 +257,50 @@
     </div>
 
     <script src="/js/style.js"></script>
-</body>
 
+    <!-- Password Overlay -->
+<div id="password-overlay" style="position: fixed; top: 0; left: 0; width: 100%; height: 100%; 
+    background-color: rgba(0, 0, 0, 0.95); z-index: 9999; display: flex; align-items: center; 
+    justify-content: center; flex-direction: column; color: white; font-family: sans-serif;">
+  <h2 style="margin-bottom: 1rem;">Enter Password</h2>
+  <input type="password" id="password-input" placeholder="Password..." 
+         style="padding: 0.5rem 1rem; font-size: 1rem; border: none; border-radius: 5px; margin-bottom: 1rem;" />
+  <button onclick="checkPassword()" 
+          style="padding: 0.5rem 1rem; font-size: 1rem; background-color: #444; color: white; border: none; border-radius: 5px; cursor: pointer;">
+    Submit
+  </button>
+  <p id="error-msg" style="color: red; margin-top: 1rem; display: none;">Incorrect password. Try again.</p>
+</div>
+
+<script>
+  // Auto-unlock if sessionStorage shows user already logged in
+  window.addEventListener('DOMContentLoaded', () => {
+    if (sessionStorage.getItem("loggedIn") === "true") {
+      document.getElementById("password-overlay").style.display = "none";
+    }
+  });
+
+  function checkPassword() {
+    const input = document.getElementById('password-input').value;
+    const overlay = document.getElementById('password-overlay');
+    const error = document.getElementById('error-msg');
+    
+    if (input === "oblock2011") {
+      sessionStorage.setItem("loggedIn", "true");
+      overlay.style.display = 'none';
+    } else {
+      error.style.display = 'block';
+    }
+  }
+
+  // Optional: Block right-click/inspect during lock
+  document.addEventListener('contextmenu', function (e) {
+    const overlay = document.getElementById('password-overlay');
+    if (overlay && overlay.style.display !== 'none') {
+      e.preventDefault();
+    }
+  });
+</script>
+
+</body>
 </html>
