--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
     <script src="https://cdn.commoninja.com/sdk/latest/commonninja.js" defer></script>
-    <script src="/js/debug.js"></script>
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -152,89 +151,49 @@
     <script src="index.js"></script>
 </head>
 <script>
-    function openInBlank() {
-        const newTab = window.open("about:blank", "_blank");
-
-        newTab.document.write(`
-        <html>
-            <head>
-                <title>about:blank</title>
-                <style>
-                    * {
-                        margin: 0;
-                        padding: 0;
-                        border: 0;
-                        overflow: hidden;
-                    }
-                    html, body {
-                        width: 100vw;
-                        height: 100vh;
-                        background: black;
-                        display: flex;
-                        align-items: center;
-                        justify-content: center;
-                    }
-                    iframe {
-                        width: 100vw;
-                        height: 100vh;
-                        border: none;
-                        position: absolute;
-                        top: 0;
-                        left: 0;
-                    }
-                </style>
-            </head>
-            <body>
-                <iframe src="https://w-pv-26.vercel.app/index.html"></iframe>
-            </body>
-        </html>
-    `);
-
-        newTab.document.close();
-    }
-
-    // Search Bar and Dropdown Functionality
-    const pages = [
+    document.addEventListener('DOMContentLoaded', () => {
+      const pages = [
         { name: "Home Page", url: "/index.html" },
         { name: "Games", url: "/static/games.html" },
         { name: "Proxies", url: "/static/proxies.html" },
         { name: "Support", url: "/static/support.html" },
         { name: "Subway Surfers", url: "/hold/subway.html"},
         { name: "Slope", url: "/hold/slope.html"},
-    ];
-
-    const searchBar = document.getElementById('search-bar');
-    const searchResults = document.getElementById('search-results');
-
-    searchBar.addEventListener('input', function () {
+      ];
+  
+      const searchBar = document.getElementById('search-bar');
+      const searchResults = document.getElementById('search-results');
+  
+      searchBar.addEventListener('input', function () {
         const query = searchBar.value.toLowerCase();
-        searchResults.innerHTML = ''; // Clear previous results
-
+        searchResults.innerHTML = '';
+  
         if (query) {
-            const filteredPages = pages.filter(page => page.name.toLowerCase().includes(query));
-
-            if (filteredPages.length > 0) {
-                filteredPages.forEach(page => {
-                    const li = document.createElement('li');
-                    const button = document.createElement('button');
-                    button.textContent = page.name;
-                    button.onclick = () => window.location.href = page.url;
-                    li.appendChild(button);
-                    searchResults.appendChild(li);
-                });
-                searchResults.style.display = 'block'; // Show results
-            } else {
-                const noResults = document.createElement('li');
-                noResults.id = 'no-results';
-                noResults.textContent = 'No results found';
-                searchResults.appendChild(noResults);
-                searchResults.style.display = 'block'; // Show no results message
-            }
+          const filteredPages = pages.filter(page => page.name.toLowerCase().includes(query));
+          if (filteredPages.length > 0) {
+            filteredPages.forEach(page => {
+              const li = document.createElement('li');
+              const button = document.createElement('button');
+              button.textContent = page.name;
+              button.onclick = () => window.location.href = page.url;
+              li.appendChild(button);
+              searchResults.appendChild(li);
+            });
+            searchResults.style.display = 'block';
+          } else {
+            const noResults = document.createElement('li');
+            noResults.id = 'no-results';
+            noResults.textContent = 'No results found';
+            searchResults.appendChild(noResults);
+            searchResults.style.display = 'block';
+          }
         } else {
-            searchResults.style.display = 'none'; // Hide results if search is empty
+          searchResults.style.display = 'none';
         }
+      });
     });
-</script>
+  </script>
+  
 
 <body>
     <canvas id="galaxy"></canvas>
