--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
     const overlay = document.getElementById('password-overlay');
     const error = document.getElementById('error-msg');
     
-    if (input === "oblock2011") {
+    if (input === "testing101") {
       sessionStorage.setItem("loggedIn", "true");
       overlay.style.display = 'none';
     } else {
