--- a/index.html
+++ b/index.html
@@ -95,11 +95,7 @@
         <a href="index.html">Project Warrant</a>
         <a href="/static/games.html">Grades</a>
         <a href="/static/proxies.html">Proxies</a>
-        <a href="/static/support.html">Support</a>
-        <button id="openBlanker">Blanker</button>
-        <script>
-            document.getElementById("openBlanker").addEventListener("click", openInBlank);
-        </script>
+        <a href="/static/chat.html">Chat</a>
     </div>
 
     <script src="/js/style.js"></script>
