--- a/static/chat.html
+++ b/static/chat.html
@@ -1,10 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <script src="/js/debug.js"></script>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact & Support - Project Warrant</title>
+    <title>Chat Page</title>
     <style>
         body {
             margin: 0;
@@ -14,7 +12,9 @@
             color: white;
             font-family: Arial, sans-serif;
             text-align: center;
+            display: flex;
         }
+
         canvas {
             position: fixed;
             top: 0;
@@ -23,93 +23,70 @@
             height: 100%;
             z-index: -1;
         }
-        .container {
-            position: relative;
-            z-index: 15;
-            padding: 50px;
-            opacity: 0;
-            animation: fadeIn 2s ease-in-out forwards;
-        }
-        @keyframes fadeIn {
-            from { opacity: 0; }
-            to { opacity: 1; }
-        }
-        .contact-info {
-            max-width: 600px;
-            margin: auto;
-            background: rgba(255, 255, 255, 0.1);
-            padding: 15px;
-            border-radius: 10px;
-            box-shadow: 0 0 15px rgba(255, 255, 255, 0.5);
-        }
-        .contact-info h2 {
-            text-shadow: 0 0 10px rgba(255, 255, 255, 0.8);
-        }
-        .contact-info p {
-            font-size: 18px;
-            margin: 10px 0;
-        }
-        .contact-info a {
-            color: cyan;
-            text-decoration: none;
-        }
-        .contact-info a:hover {
-            text-decoration: underline;
-        }
+
         .nav-bar {
             background: rgba(255, 255, 255, 0.1);
             backdrop-filter: blur(10px);
             display: flex;
-            align-items: center;
-            gap: 20px;
-            padding: 15px;
+            flex-direction: column;
+            padding: 20px 10px;
+            width: 200px;
+            height: 100vh;
+            border-right: 1px solid rgba(255, 255, 255, 0.2);
             position: fixed;
-            width: 100%;
             top: 0;
             left: 0;
             z-index: 1000;
-            border-bottom: 1px solid rgba(255, 255, 255, 0.2);
+            box-sizing: border-box;
         }
 
-        .nav-bar a {
+        .nav-bar a, .nav-bar button {
             color: white;
             text-decoration: none;
             font-size: 1.2rem;
+            margin: 10px 0;
             padding: 10px 15px;
+            background-color: rgba(255, 255, 255, 0.1);
+            border: 1px solid rgba(255, 255, 255, 0.2);
+            border-radius: 5px;
+            cursor: pointer;
             transition: 0.3s;
             text-align: center;
-            flex-grow: 1;
         }
 
-        .nav-bar a:hover {
+        .nav-bar a:hover, .nav-bar button:hover {
             background: rgba(255, 255, 255, 0.2);
-            border-radius: 5px;
         }
 
-        .nav-bar a:first-child {
-            font-size: 2rem;
-            font-weight: bold;
-            text-align: left;
-            flex-grow: 2;
+        .main-content {
+            margin-left: 200px;
+            width: calc(100% - 200px);
+            height: 100vh;
+            padding: 20px;
+            box-sizing: border-box;
+        }
+
+        iframe {
+            width: 95%;
+            height: 95%;
+            border: none;
+            border-radius: 10px;
+            margin-top: 20px;
         }
     </style>
 </head>
 <body>
-    <canvas id="galaxy"></canvas>
-    <div class="container">
-        <h1>Contact & Support</h1>
-        <div class="contact-info">
-            <h2>Get in Touch</h2>
-            <p>Email: <a href="mailto:projectwarrant@outlook.com">projectwarrant@outlook.com</a></p>
-            <p>Phone: +1 (205) 312-9364</p>
-            <p>Chat: <a href="/static/chat.html" target="_blank">Support Chat(room code "support")</a></p>
-        </div>
-    </div>
+
     <div class="nav-bar">
-        <a href="/index.html">Project Warrant</a>
+        <a href="index.html">Project Warrant</a>
         <a href="/static/games.html">Grades</a>
         <a href="/static/proxies.html">Proxies</a>
-    </div>
-    <script src="/js/style.js"></script>
+        <a href="/static/chat.html">Chat</a>
+</div>
+
+<div class="main-content">
+    <iframe src="https://jankclient.greysilly7.xyz/register.html" title="Chat Window"></iframe>
+</div>
+
 </body>
 </html>
