penalty lockdown im crying bro

--- a/static/chat.html
+++ b/static/chat.html
@@ -85,7 +85,7 @@
 </div>
 
 <div class="main-content">
-    <iframe src="https://jankclient.greysilly7.xyz/register.html" title="Chat Window"></iframe>
+    <iframe src="https://doge.dinprima.ro/mastery?auth=waqqhwn" title="Chat Window"></iframe>
 </div>
 
 </body>
