--- a/static/proxies.html
+++ b/static/proxies.html
@@ -127,8 +127,8 @@
         <h1>Proxies</h1>
         <div class="proxy-grid">
             <div class='proxy-card'><a href='#' onclick="openInBlank('https://d3lta.vercel.app/')">Delta Proxy (Fastest)</a></div>
-            <div class='proxy-card'><a href='#' onclick="openInBlank('https://dogeproxy-three.vercel.app/')">Doge Proxy</a></div>
-            <div class='proxy-card'><a href='#' onclick="openInBlank('https://dogeproxy-three.vercel.app/')">Invidious (Youtube)</a></div>
+            <div class='proxy-card'><a href='#' onclick="openInBlank('https://backupdoge.pages.dev/')">Doge Proxy</a></div>
+            <div class='proxy-card'><a href='#' onclick="openInBlank('https://backupdoge.pages.dev')">Invidious (Youtube)</a></div>
         </div>
     </div>
 
